--- a/extension.qmd
+++ b/extension.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Model extension"
 author: "Jong-Hoon Kim"
-date: "2025-12-22                                                    "
+date: "`r Sys.Date()`"
 format:
   html:
     toc: true
@@ -18,6 +18,7 @@ library(MASS)
 library(Matrix)
 library(dplyr)
 library(ggplot2)
+source("R/utils.R")
 ```
 
 # Spatially correlated outbreak risks and spillover
